--- a/Squirrel/Squirrel.Web/Squirrel.Web.csproj
+++ b/Squirrel/Squirrel.Web/Squirrel.Web.csproj
@@ -173,12 +173,14 @@
     <Compile Include="Controllers\IssueController.cs" />
     <Compile Include="Controllers\IssuesController.cs" />
     <Compile Include="Filters\AreaAuthorizationFilter.cs" />
+    <Compile Include="Filters\CachedDataFilter.cs" />
     <Compile Include="Filters\LogFilter.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Models\BaseViewPage.cs" />
+    <Compile Include="Models\CachedAppData.cs" />
     <Compile Include="Models\CustomMultipartFormDataStreamProvider.cs" />
     <Compile Include="Models\SqPrincipal.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -4630,9 +4632,9 @@
     <Content Include="Content\themes\vone\fonts\IRAN-SANS-Family-Typeface\IRAN Sans\IRAN Sans Expanded.ttf" />
     <Content Include="Content\themes\vone\fonts\IRAN-SANS-Family-Typeface\IRAN Sans\IRAN Sans.ttf" />
     <Content Include="Content\themes\vone\fonts\IRAN-SANS-Family-Typeface\IRAN Sans\IRAN-Sans.ttf" />
-    <Content Include="Content\themes\vone\fonts\IRSans\IIRANSansLE.woff2" />
-    <Content Include="Content\themes\vone\fonts\IRSans\IIRANSansLE.woff" />
-    <Content Include="Content\themes\vone\fonts\IRSans\IIRANSansLE.eot" />
+    <Content Include="Content\themes\vone\fonts\IRSans\IRANSansLE.woff2" />
+    <Content Include="Content\themes\vone\fonts\IRSans\IRANSansLE.woff" />
+    <Content Include="Content\themes\vone\fonts\IRSans\IRANSansLE.eot" />
     <Content Include="Content\themes\vone\fonts\IRSans\IRANSansB.eot" />
     <Content Include="Content\themes\vone\fonts\IRSans\IRANSansB.woff" />
     <Content Include="Content\themes\vone\fonts\IRSans\IRANSansB.woff2" />
@@ -4647,6 +4649,15 @@
     <Content Include="Content\themes\vone\palette.css.map">
       <DependentUpon>palette.css</DependentUpon>
     </Content>
+    <Content Include="Content\themes\vone\fonts\IRSans\IRANSansE.eot" />
+    <Content Include="Content\themes\vone\fonts\IRSans\IRANSansE.woff" />
+    <Content Include="Content\themes\vone\fonts\IRSans\IRANSansE.woff2" />
+    <Content Include="Content\themes\vone\fonts\IRSans\IRANSansL.eot" />
+    <Content Include="Content\themes\vone\fonts\IRSans\IRANSansL.woff" />
+    <Content Include="Content\themes\vone\fonts\IRSans\IRANSansL.woff2" />
+    <Content Include="Content\themes\vone\fonts\IRSans\IRANSans.eot" />
+    <Content Include="Content\themes\vone\fonts\IRSans\IRANSans.woff" />
+    <Content Include="Content\themes\vone\fonts\IRSans\IRANSans.woff2" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="npmPlaceholder.txt" />
     <Content Include="Scripts\bootstrap.js" />
@@ -4720,6 +4731,9 @@
     <Content Include="Views\Issue\Post_AddComment.cshtml" />
     <Content Include="Views\Shared\Loading.cshtml" />
     <Content Include="Views\Issue\Post_Comments.cshtml" />
+    <Content Include="Views\Home\Index_TopTopic.cshtml" />
+    <Content Include="Views\Home\Index_TopicItem.cshtml" />
+    <Content Include="Views\Home\Index_TopicItems.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Squirrel.Domain\Squirrel.Domain.csproj">
