--- a/Squirrel/Squirrel.Web/Squirrel.Web.csproj
+++ b/Squirrel/Squirrel.Web/Squirrel.Web.csproj
@@ -887,7 +887,7 @@
     <Content Include="Areas\Author\Views\Topics\SimpleList .cshtml" />
     <Content Include="Areas\Author\Views\Posts\Item_Action.cshtml" />
     <Content Include="Areas\Author\Views\Posts\Item_Image.cshtml" />
-    <Content Include="Areas\Author\Views\Files\Popup.cshtml" />
+    <Content Include="Areas\Author\Views\Files\ChoosePopup.cshtml" />
     <Content Include="Areas\Author\Views\Posts\Item_Attachments.cshtml" />
     <Content Include="Areas\Author\Views\Posts\Item_Content.cshtml" />
     <Content Include="ckeditor\CHANGES.md" />
@@ -1045,6 +1045,10 @@
     <Content Include="Areas\Author\Views\Shared\_SideMenu.cshtml" />
     <Content Include="Areas\Author\Views\Shared\_Header.cshtml" />
     <Content Include="Areas\Author\Views\Shared\_SecondryContents.cshtml" />
+    <Content Include="Areas\Author\Views\Topics\Details.cshtml" />
+    <Content Include="Areas\Author\Views\Shared\Popup.cshtml" />
+    <Content Include="Areas\Author\Views\Topics\PublishDate.cshtml" />
+    <Content Include="Areas\Author\Views\Posts\Item_Abstract.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="npmPlaceholder.txt" />
     <Content Include="Scripts\bootstrap.js" />
@@ -1131,6 +1135,7 @@
     <Content Include="Views\Issues\_Issues.cshtml" />
     <Content Include="Views\Issues\_Issues_Item.cshtml" />
     <Content Include="Views\Issues\Category.cshtml" />
+    <Content Include="Views\Issue\Preview.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Squirrel.Domain\Squirrel.Domain.csproj">
