Admin category panel

--- a/Squirrel/Squirrel.Web/Web.config
+++ b/Squirrel/Squirrel.Web/Web.config
@@ -12,7 +12,9 @@
   <connectionStrings>
     <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-Squirrel.Web-20150113063747.mdf;Initial Catalog=aspnet-Squirrel.Web-20150113063747;Integrated Security=True"
       providerName="System.Data.SqlClient" />-->
-    <add name="SquirrelContext" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\BlogDbs.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="SquirrelContext"
+         connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\BlogDbs.mdf;User Id=Squirrel_App;Password=20150527#SquirreL;Integrated Security=True"
+         providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -42,7 +44,8 @@
   <system.webServer>
     <security>
       <requestFiltering>
-        <requestLimits maxAllowedContentLength="104857600" />
+        <!--<requestLimits maxAllowedContentLength="104857600" />-->
+        <requestLimits maxAllowedContentLength="4294967295" />
       </requestFiltering>
     </security>
     <modules>
