--- a/Squirrel/Squirrel.Web/Squirrel.Web.csproj
+++ b/Squirrel/Squirrel.Web/Squirrel.Web.csproj
@@ -936,8 +936,6 @@
     <Content Include="Areas\Author\Views\Categories\Add.cshtml" />
     <Content Include="Areas\Author\Views\Categories\Details.cshtml" />
     <Content Include="Areas\Author\Views\Categories\Edit.cshtml" />
-    <Content Include="Areas\Admin\Views\Categories\Remove.cshtml" />
-    <Content Include="Areas\Admin\Views\Categories\Replace.cshtml" />
     <Content Include="Areas\Author\Views\Files\Add.cshtml" />
     <Content Include="Areas\Author\Views\Files\Index.cshtml" />
     <Content Include="Areas\Author\Views\Files\Upload.cshtml" />
@@ -1136,6 +1134,8 @@
     <Content Include="ckeditor\skins\icy_orange\dev\locations.json" />
     <Content Include="ckeditor\skins\icy_orange\readme.md" />
     <Content Include="Areas\Author\Views\Categories\Tree_Item.cshtml" />
+    <Content Include="Areas\Author\Views\Categories\Remove.cshtml" />
+    <Content Include="Areas\Author\Views\Categories\Replace.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="npmPlaceholder.txt" />
     <Content Include="Scripts\bootstrap.js" />
@@ -1244,6 +1244,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Areas\Admin\Models\" />
+    <Folder Include="Areas\Admin\Views\Categories\" />
     <Folder Include="Areas\Author\Models\" />
     <Folder Include="Content\Files\temp\" />
     <Folder Include="Views\Base\" />
