--- a/Squirrel/Squirrel.Web/Squirrel.Web.csproj
+++ b/Squirrel/Squirrel.Web/Squirrel.Web.csproj
@@ -1137,6 +1137,16 @@
     <Content Include="Areas\Author\Views\Categories\Remove.cshtml" />
     <Content Include="Areas\Author\Views\Categories\Replace.cshtml" />
     <Content Include="Areas\Author\Views\Profile\Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\Shared\_HandledError.cshtml" />
+    <Content Include="Areas\Admin\Views\Shared\_Header.cshtml" />
+    <Content Include="Areas\Admin\Views\Shared\_SecondryContents.cshtml" />
+    <Content Include="Areas\Admin\Views\Shared\_SideMenu.cshtml" />
+    <Content Include="Areas\Admin\Views\Shared\HandledError.cshtml" />
+    <Content Include="Areas\Admin\Views\Shared\Popup.cshtml" />
+    <Content Include="Areas\Author\Views\Panel\_Tiles.cshtml" />
+    <Content Include="Areas\Author\Views\Panel\_Statistics.cshtml" />
+    <Content Include="Areas\Author\Views\Panel\_Topics.cshtml" />
+    <Content Include="Areas\Author\Views\Panel\_Comments.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="npmPlaceholder.txt" />
     <Content Include="Scripts\bootstrap.js" />
