--- a/Squirrel/Squirrel.Test/App.config
+++ b/Squirrel/Squirrel.Test/App.config
@@ -5,7 +5,9 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="SquirrelContext" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\BlogDbs.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="SquirrelContext"
+         connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\BlogDbs.mdf;User Id=Blog_App;Password=20150530#SquirreBlog;Integrated Security=True"
+         providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
