--- a/Squirrel/Squirrel.Web/Web.config
+++ b/Squirrel/Squirrel.Web/Web.config
@@ -56,6 +56,7 @@
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+      <!-- register HttpHandler used for BotDetect Captcha requests -->
       <remove name="BotDetectCaptchaHandler" />
       <add name="BotDetectCaptchaHandler" preCondition="integratedMode" verb="GET" path="BotDetectCaptcha.ashx" type="BotDetect.Web.CaptchaHandler, BotDetect" />
     </handlers>
