--- a/Squirrel/Squirrel.Test/Squirrel.Test.csproj
+++ b/Squirrel/Squirrel.Test/Squirrel.Test.csproj
@@ -63,6 +63,7 @@
     <Compile Include="DomainLayer\CryptographyHashingTest.cs" />
     <Compile Include="DomainLayer\CryptographySymmetricTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ServiceLayer\EmailServiceTest.cs" />
     <Compile Include="ServiceLayer\GeneralTest.cs" />
     <Compile Include="ServiceLayer\ConfigServiceTest.cs" />
     <Compile Include="ServiceLayer\TagServiceTest.cs" />
