--- a/Squirrel/Squirrel.Utility/Squirrel.Utility.csproj
+++ b/Squirrel/Squirrel.Utility/Squirrel.Utility.csproj
@@ -84,6 +84,7 @@
     <Compile Include="Helpers\StringExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rss\RssActionResult.cs" />
+    <Compile Include="Xml\XmlReadService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
