--- a/Squirrel/Squirrel.Web/Squirrel.Web.csproj
+++ b/Squirrel/Squirrel.Web/Squirrel.Web.csproj
@@ -182,6 +182,7 @@
     <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Models\BaseViewPage.cs" />
     <Compile Include="Models\CachedAppData.cs" />
+    <Compile Include="Models\CaptchaHelper.cs" />
     <Compile Include="Models\CustomMultipartFormDataStreamProvider.cs" />
     <Compile Include="Models\ErrorViewModel.cs" />
     <Compile Include="Models\RsaClass.cs" />
@@ -193,6 +194,7 @@
     <Content Include="App_Data\BlogDbs_log.ldf">
       <DependentUpon>BlogDbs.mdf</DependentUpon>
     </Content>
+    <Content Include="App_Data\EmailSmtpModels.xml" />
     <Content Include="ckeditor\adapters\jquery.js" />
     <Content Include="ckeditor\build-config.js" />
     <Content Include="ckeditor\ckeditor.js" />
@@ -884,6 +886,7 @@
     <Content Include="Content\themes\vone\images\favicon.png" />
     <Content Include="Content\themes\vone\images\generalavatar.png" />
     <Content Include="Content\themes\vone\images\Logo.svg" />
+    <Content Include="Content\themes\vone\images\submit_loader.GIF" />
     <Content Include="Content\themes\vone\loading.css">
       <DependentUpon>loading.less</DependentUpon>
     </Content>
@@ -1234,6 +1237,8 @@
     <Content Include="Views\Issues\_Issues_Item.cshtml" />
     <Content Include="Views\Issues\Category.cshtml" />
     <Content Include="Views\Issue\Preview.cshtml" />
+    <Content Include="Views\Home\Contactus.cshtml" />
+    <Content Include="Views\Shared\Sidebar\_Contact.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Squirrel.Domain\Squirrel.Domain.csproj">
