--- a/Squirrel/Squirrel.Domain/Squirrel.Domain.csproj
+++ b/Squirrel/Squirrel.Domain/Squirrel.Domain.csproj
@@ -113,6 +113,7 @@
     <Compile Include="ViewModels\PostViewModels.cs" />
     <Compile Include="ViewModels\ProfileViewModels.cs" />
     <Compile Include="ViewModels\FileViewModels.cs" />
+    <Compile Include="ViewModels\ResumeViewModels.cs" />
     <Compile Include="ViewModels\TagViewModels.cs" />
     <Compile Include="ViewModels\TopicViewModels.cs" />
     <Compile Include="ViewModels\UserViewModels.cs" />
