--- a/Squirrel/Squirrel.Web/Web.config
+++ b/Squirrel/Squirrel.Web/Web.config
@@ -13,7 +13,7 @@
     <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-Squirrel.Web-20150113063747.mdf;Initial Catalog=aspnet-Squirrel.Web-20150113063747;Integrated Security=True"
       providerName="System.Data.SqlClient" />-->
     <add name="SquirrelContext"
-         connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\BlogDbs.mdf;User Id=Blog_App;Password=20150530#SquirreBlog;Integrated Security=True"
+         connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\BlogDbs.mdf;Integrated Security=True"
          providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
