--- a/Squirrel/Squirrel.Data/Squirrel.Data.csproj
+++ b/Squirrel/Squirrel.Data/Squirrel.Data.csproj
@@ -58,39 +58,16 @@
     <Compile Include="DataIOC.cs" />
     <Compile Include="Interfaces\IRepositoryContext.cs" />
     <Compile Include="Interfaces\IWarehouseContext.cs" />
-    <Compile Include="Migrations\201502220824522_recreate.cs" />
-    <Compile Include="Migrations\201502220824522_recreate.Designer.cs">
-      <DependentUpon>201502220824522_recreate.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201502221314185_editlog.cs" />
-    <Compile Include="Migrations\201502221314185_editlog.Designer.cs">
-      <DependentUpon>201502221314185_editlog.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201502230739379_editlog1.cs" />
-    <Compile Include="Migrations\201502230739379_editlog1.Designer.cs">
-      <DependentUpon>201502230739379_editlog1.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201502231122158_add-publishdate.cs" />
-    <Compile Include="Migrations\201502231122158_add-publishdate.Designer.cs">
-      <DependentUpon>201502231122158_add-publishdate.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201502250614538_edit-comment.cs" />
-    <Compile Include="Migrations\201502250614538_edit-comment.Designer.cs">
-      <DependentUpon>201502250614538_edit-comment.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201503161217548_issueId.cs" />
-    <Compile Include="Migrations\201503161217548_issueId.Designer.cs">
-      <DependentUpon>201503161217548_issueId.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201503161220139_issueId-change.cs" />
-    <Compile Include="Migrations\201503161220139_issueId-change.Designer.cs">
-      <DependentUpon>201503161220139_issueId-change.cs</DependentUpon>
+    <Compile Include="Migrations\201509020638196_initial.cs" />
+    <Compile Include="Migrations\201509020638196_initial.Designer.cs">
+      <DependentUpon>201509020638196_initial.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\WarehouseContext.cs" />
     <Compile Include="Services\RepositoryContext.cs" />
     <Compile Include="SquirrelContext.cs" />
+    <Compile Include="Tools\SquirrelContextInitializer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -101,28 +78,14 @@
       <Project>{9f182785-67c7-4abb-9306-b330af9b5fd3}</Project>
       <Name>Squirrel.Domain</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Squirrel.Utility\Squirrel.Utility.csproj">
+      <Project>{4e7e5ce0-c8ef-4e11-b465-e270712616d9}</Project>
+      <Name>Squirrel.Utility</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201502220824522_recreate.resx">
-      <DependentUpon>201502220824522_recreate.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201502221314185_editlog.resx">
-      <DependentUpon>201502221314185_editlog.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201502230739379_editlog1.resx">
-      <DependentUpon>201502230739379_editlog1.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201502231122158_add-publishdate.resx">
-      <DependentUpon>201502231122158_add-publishdate.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201502250614538_edit-comment.resx">
-      <DependentUpon>201502250614538_edit-comment.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201503161217548_issueId.resx">
-      <DependentUpon>201503161217548_issueId.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201503161220139_issueId-change.resx">
-      <DependentUpon>201503161220139_issueId-change.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201509020638196_initial.resx">
+      <DependentUpon>201509020638196_initial.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
